part1/project1/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project1-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project1
  template:
    metadata:
      labels:
        app: project1
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: image-finder
          image: image-finder-app:2.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/image
        - name: p1-output
          image: p1-output-app:1.7
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/image
