part1/project1/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project1-svc
spec:
  type: ClusterIP
  selector:
    app: project1
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
